<resources>
    <string name="app_name">The Assistant</string>
    <string name="app_email">info@theassistant.io</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="send_to_wearable">Send notification:</string>
    <string name="enter_text">Please enter some text</string>
    <string name="no_notification">No notification</string>
    <string name="empty_notification">You sent an empty notification</string>
    <string name="information">Information</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_website">Bartimeus.nl</string>
    <string name="nav_help">Help</string>

    <string name="reloaded_wearable_service">Reloading wearable service</string>
    <string name="reloaded_server_service">Reloading server service</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_socketport">Socket port</string>
    <string name="settings_socketurl">Socket IP</string>
    <string name="settings_barcode">QR code scanner</string>
    <string name="settings_toast_save">Saved settings!</string>
    <string name="title_activity_barcode">QR code scanner</string>

    <string name="dashboard_server_connection">Server connection</string>
    <string name="dashboard_wear_connection">Wearable connection</string>

    <string name="qr_code_raw">RAW data</string>
    <string name="qr_code_error">Invalid qr code</string>


</resources>
