<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_settings"
        tools:context="com.example.florianporada.theassistant2.SettingsActivity">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:layout_marginTop="47dp"
            android:id="@+id/settings_editText_socketip"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:layout_below="@+id/settings_editText_socketip" android:layout_alignStart="@+id/settings_editText_socketip"
            android:layout_marginTop="50dp" android:id="@+id/settings_editText_socketport"/>
    <TextView
            android:text="@string/settings_socketport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/settings_editText_socketip"
            android:layout_alignStart="@+id/settings_editText_socketport" android:layout_marginTop="26dp" android:id="@+id/textView4"/>
    <TextView
            android:text="@string/settings_socketurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp" android:id="@+id/textView3" android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/settings_editText_socketip"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="40dp" android:layout_below="@+id/settings_editText_socketport"
                  android:layout_alignParentStart="true">

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_barcode"
                android:id="@+id/settings_barcode"
                android:layout_weight="1"
                android:layout_gravity="bottom"/>
    </LinearLayout>
</RelativeLayout>
