<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context="com.example.florianporada.theassistant2.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_wearable"/>
    <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_alignParentStart="true"/>
    <LinearLayout
            android:id="@+id/serverContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_alignParentStart="true" android:layout_marginTop="15dp">
        <TextView
                android:text="@string/dashboard_server_connection"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/box_size"
                android:id="@+id/textViewServerConnection" android:gravity="center_vertical|start" android:layout_weight="0.8"
                android:textSize="18sp"/>
        <Button
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:id="@+id/reloadServer" android:background="@drawable/cast_ic_notification_forward"
                android:layout_weight="0.1" android:elevation="24dp"/>
        <ImageView
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size" app:srcCompat="@android:drawable/presence_offline"
                android:id="@+id/imageViewServer" android:layout_gravity="end" android:layout_weight="0.1"/>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/wearContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp" android:layout_below="@+id/serverContainer"
            android:layout_alignParentStart="true">
        <TextView
                android:text="@string/dashboard_wear_connection"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/box_size"
                android:id="@+id/textViewWearConnection" android:gravity="center_vertical|start" android:layout_weight="0.8"
                android:textSize="18sp" android:textAlignment="viewStart"/>
        <Button
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:id="@+id/reloadWear" android:background="@drawable/cast_ic_notification_forward"
                android:layout_weight="0.1"/>
        <ImageView
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size" app:srcCompat="@android:drawable/presence_offline"
                android:id="@+id/imageViewWear" android:layout_gravity="end" android:layout_weight="0.1"
        />
    </LinearLayout>
</RelativeLayout>
